# contracts/openapi/openapi.json
@@ -7,7 +7,7 @@
       "name": "MIT OR Apache-2.0",
       "identifier": "MIT OR Apache-2.0"
     },
-    "version": "1.0.0-rc.1"
+    "version": "1.0.0-rc.2"
   },
   "paths": {
     "/api/v1/activity": {
@@ -791,9 +791,14 @@
           "lastTestState",
           "previewReady",
           "startedAt",
-          "updatedAt"
+          "updatedAt",
+          "freshUntil"
         ],
         "properties": {
+          "freshUntil": {
+            "type": "string",
+            "format": "date-time"
+          },
           "lastTestState": {
             "type": "string"
           },
